--- a/06_bootstrapping.Rmd
+++ b/06_bootstrapping.Rmd
@@ -35,14 +35,14 @@ options(scipen = 999)
 ```
 
 # reading saved model
-```{r}
+```{r include=FALSE}
 # full_model <- readRDS("saved_models/full_model.rds")
 ```
 
-# bootstrapping
 
+# bootstrapping
 ## cases bootstrap
-```{r}
+```{r include=FALSE}
 # cases_boot_full_model <- 
 #   bootstrap(
 #     full_model,
@@ -57,7 +57,7 @@ options(scipen = 999)
 
 
 ### reading bootstrap file and extracting results into a list
-```{r}
+```{r include=FALSE}
 cases_boot_full_model <- readRDS("bootstrapping/cases_boot_full_model.rds")
 
 list_cases_boot_full_model <- 
@@ -66,7 +66,7 @@ list_cases_boot_full_model <-
 
 
 ### extracting bootstrapped coefficients
-```{r paged.print=TRUE}
+```{r include=FALSE, paged.print=TRUE}
 cases_boot_ci_full_model  <-
   list_cases_boot_full_model %>%
   map(confint, type = "norm")
@@ -93,26 +93,69 @@ cases_boot_ci_full_model
 ```{r}
 residual_boot_full_model <- readRDS("bootstrapping/residual_boot_full_model.rds")
 
-list_residual_boot_full_model <- 
+list_residual_boot_full_model <-
   list(residual_boot_full_model)
 ```
 
 
 ### extracting bootstrapped coefficients
 ```{r paged.print=TRUE}
-residual_boot_ci_full_model  <-
+residual_boot_ci_full_model_basic  <-
   list_residual_boot_full_model %>%
   map(confint, type = "basic")
-residual_boot_ci_full_model
+residual_boot_ci_full_model_basic
+
+residual_boot_ci_full_model_perc  <-
+  list_residual_boot_full_model %>%
+  map(confint, type = "perc")
+residual_boot_ci_full_model_perc
 ```
 
 
+
+## parametric bootstrap
+```{r}
+parametric_boot_full_model <-
+  bootstrap(
+    full_model,
+    .f = fixef,
+    type = "parametric",
+    B = 5000 ,
+    resample = c(TRUE, TRUE)
+  )
+
+saveRDS(parametric_boot_full_model, "bootstrapping/parametric_boot_full_model.rds")
+```
+
+
+### reading bootstrap file and extracting results into a list
+```{r}
+parametric_boot_full_model <- readRDS("bootstrapping/parametric_boot_full_model.rds")
+
+list_parametric_boot_full_model <- 
+  list(parametric_boot_full_model)
+```
+
+
+### extracting bootstrapped coefficients
+```{r paged.print=TRUE}
+parametric_boot_ci_full_model_basic  <-
+  list_parametric_boot_full_model %>%
+  map(confint, type = "basic")
+parametric_boot_ci_full_model_basic
+
+parametric_boot_ci_full_model_perc  <-
+  list_parametric_boot_full_model %>%
+  map(confint, type = "perc")
+parametric_boot_ci_full_model_perc
+```
+
+
+
 # visualizing bootstrap results
-
 ## cases bootstrap
-
 ### main effects (prediction of negative affect)
-```{r echo=TRUE}
+```{r echo=TRUE, include=FALSE}
 # extracting results into a tibble
 dat_cases_boot_full_model_maineff <- 
   list_cases_boot_full_model %>% 
@@ -150,7 +193,7 @@ coef_cases_boot_full_model_maineff
 ```
 
 ### interactions (moderation of emotional reactivity)
-```{r echo=TRUE}
+```{r echo=TRUE, include=FALSE}
 # extracting results into a tibble
 dat_cases_boot_full_model_interac <- 
   list_cases_boot_full_model %>% 
@@ -188,8 +231,8 @@ coef_cases_boot_full_model_interac
 ```
 
 
-## residual bootstrap
 
+## residual bootstrap
 ### main effects (prediction of negative affect)
 ```{r echo=TRUE}
 # extracting results into a tibble
@@ -266,3 +309,84 @@ coef_residual_boot_full_model_interac <-
      scale_fill_manual(values = c("#FF9500", "#219C19", "#609CCE"), labels = c("Mean state rumination", "State rumination", "Trait rumination"))
 coef_residual_boot_full_model_interac
 ```
+
+
+
+## parametric bootstrap
+### main effects (prediction of negative affect)
+```{r echo=TRUE}
+# extracting results into a tibble
+dat_parametric_boot_full_model_maineff <- 
+  list_parametric_boot_full_model %>% 
+  map("replicates") %>% 
+  map(
+    ~tibble(
+      trait_rumination = na.omit(.x$trait_rumination),
+      mean_state_rumination = na.omit(.x$mean_state_rumi_grand_centered),
+      state_rumination = na.omit(.x$rumination_centered)
+    )
+  ) %>%
+  bind_rows()
+
+
+# rearranging tibble format
+dat_parametric_boot_full_model_maineff_long <- 
+  dat_parametric_boot_full_model_maineff %>% 
+  pivot_longer(c(trait_rumination, mean_state_rumination, state_rumination), names_to = "rumination_measure", values_to = "rumination_intensity")
+
+
+# plotting
+coef_parametric_boot_full_model_maineff <- 
+  dat_parametric_boot_full_model_maineff_long %>% 
+  ggplot(aes(rumination_intensity, fill = rumination_measure)) +
+     geom_vline(xintercept = 0, color = "black", linetype = 2, alpha = .5, size = 1) + 
+     geom_density(alpha = .7, color = NA) +
+     labs(
+       x    = "Boostrapped estimate of the prediction of\nnegative affect by different measures of rumination",
+       y = "Density",
+       fill = "",
+       title    = ""
+       ) +
+     scale_fill_manual(values = c("#FF9500", "#219C19", "#609CCE"), labels = c("Mean state rumination", "State rumination", "Trait rumination"))
+coef_parametric_boot_full_model_maineff
+```
+
+
+### interactions (moderation of emotional reactivity)
+```{r echo=TRUE}
+# extracting results into a tibble
+dat_parametric_boot_full_model_interac <- 
+  list_parametric_boot_full_model %>% 
+  map("replicates") %>% 
+  map(
+    ~tibble(
+      trait_rumination = na.omit(.x$"event_unpleasantness_centered:trait_rumination"),
+      mean_state_rumination = na.omit(.x$"event_unpleasantness_centered:mean_state_rumi_grand_centered"),
+      state_rumination = na.omit(.x$"event_unpleasantness_centered:rumination_centered")
+    )
+  ) %>%
+  bind_rows()
+
+
+# rearranging tibble format
+dat_parametric_boot_full_model_interac_long <- 
+  dat_parametric_boot_full_model_interac %>% 
+  pivot_longer(c(trait_rumination, mean_state_rumination, state_rumination), names_to = "rumination_measure", values_to = "rumination_intensity")
+
+
+# plotting
+coef_parametric_boot_full_model_interac <- 
+  dat_parametric_boot_full_model_interac_long %>% 
+  ggplot(aes(rumination_intensity, fill = rumination_measure)) +
+     geom_vline(xintercept = 0, color = "black", linetype = 2, alpha = .5, size = 1) + 
+     geom_density(alpha = .7, color = NA) +
+     labs(
+       x    = "Boostrapped estimate of the moderation of\nemotional reactivity by different measures of rumination",
+       y = "Density",
+       fill = "",
+       title    = ""
+       ) +
+     scale_fill_manual(values = c("#FF9500", "#219C19", "#609CCE"), labels = c("Mean state rumination", "State rumination", "Trait rumination"))
+coef_parametric_boot_full_model_interac
+```
+
