--- a/03_descriptive_stats.Rmd
+++ b/03_descriptive_stats.Rmd
@@ -440,14 +440,14 @@ corrplot <-
   ggplot(corr_rumi, aes(trait_rumination, mean_state_rumi_grand_centered)) +
     geom_point(alpha = 0.5, position = "jitter", size = 2.5) +
     geom_smooth(method = "lm", fill = "#F1B564", color = "#F19E64") +
-    theme_minimal() +
+    theme_classic() +
     labs(x = "Trait rumination",
          y = "Mean state rumination"
     ) +
     theme(axis.title = element_text(size = 12),
-          axis.text = element_text(size = 18, color = "black"),
-          panel.grid.minor.y = element_blank(),
-          axis.line = element_line()
+          axis.text = element_text(size = 18, color = "black")
+          # panel.grid.minor.y = element_blank(),
+          # axis.line = element_line()
     )
 corrplot
 
