--- a/06_bootstrapping.Rmd
+++ b/06_bootstrapping.Rmd
@@ -182,7 +182,7 @@ coef_cases_boot_full_model_maineff <-
      geom_vline(xintercept = 0, color = "black", linetype = 2, alpha = .5, size = 1) + 
      geom_density(alpha = .7, color = NA) +
      labs(
-       x    = "Boostrapped estimate of the prediction of\nnegative affect by different measures of rumination",
+       x    = "Boostrapped estimates of the prediction of\nnegative affect by different measures of rumination",
        y = "Density",
        fill = "",
        title    = ""
@@ -220,7 +220,7 @@ coef_cases_boot_full_model_interac <-
      geom_vline(xintercept = 0, color = "black", linetype = 2, alpha = .5, size = 1) + 
      geom_density(alpha = .7, color = NA) +
      labs(
-       x    = "Boostrapped estimate of the moderation of\nemotional reactivity by different measures of rumination",
+       x    = "Boostrapped estimates of the moderation of\nemotional reactivity by different measures of rumination",
        y = "Density",
        fill = "",
        title    = ""
@@ -261,11 +261,13 @@ coef_residual_boot_full_model_maineff <-
      geom_vline(xintercept = 0, color = "black", linetype = 2, alpha = .5, size = 1) + 
      geom_density(alpha = .7, color = NA) +
      labs(
-       x    = "Boostrapped estimate of the prediction of\nnegative affect by different measures of rumination",
+       x    = "Boostrapped estimates for the prediction of\nnegative affect by different measures of rumination",
        y = "Density",
        fill = "",
        title    = ""
        ) +
+     theme_classic() +
+     theme(legend.position = c(0.8, 0.8)) +
      scale_fill_manual(values = c("#FF9500", "#219C19", "#609CCE"), labels = c("Mean state rumination", "State rumination", "Trait rumination"))
 coef_residual_boot_full_model_maineff
 ```
@@ -300,12 +302,14 @@ coef_residual_boot_full_model_interac <-
      geom_vline(xintercept = 0, color = "black", linetype = 2, alpha = .5, size = 1) + 
      geom_density(alpha = .7, color = NA) +
      labs(
-       x    = "Boostrapped estimate of the moderation of\nemotional reactivity by different measures of rumination",
+       x    = "Boostrapped estimates for the moderation of\nemotional reactivity by different measures of rumination",
        y = "Density",
        fill = "",
        title    = ""
        ) +
-     scale_fill_manual(values = c("#FF9500", "#219C19", "#609CCE"), labels = c("Mean state rumination", "State rumination", "Trait rumination"))
+       theme_classic()+
+       theme(legend.position = c(0.8, 0.8)) +
+       scale_fill_manual(values = c("#FF9500", "#219C19", "#609CCE"), labels = c("Mean state rumination", "State rumination", "Trait rumination"))
 coef_residual_boot_full_model_interac
 ```
 
